Init Docker build
- Adds the dockerfile assets from vapor-ware/netbox-docker
- Slight changes to keep the root directory clean (nesting dirs in
  docker path)
- Adds a rudimentary job label to build on micro-k8s builder
- adds docker build/publish stages to the pipeline for branch builds.

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@
 !upgrade.sh
 fabfile.py
 *.swp
-gunicorn_config.py
 .DS_Store
 .vscode
 .venv
 .tox
+gunicorn_config.py
+!docker/configuration/gunicorn_config.py
