Update project scaffolding
* Use nginx for static files
* Add netbox to docker-compose
* Lint source code
* Update nginx.conf to actually work
* Build a base `branch` tag for latest of that branch

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,9 @@ description=
   run tests with django.
 deps=
   -r{toxinidir}/requirements.txt
+  pycodestyle
+  tblib
 changedir = netbox
 commands=
+  pycodestyle --ignore=W504,E501 .
   python manage.py test --failfast --noinput --parallel 5 --no-color
