Add initializers to produce a single 6 wedge site with 9U lockers

--- a/docker/initializers/device_roles.yml
+++ b/docker/initializers/device_roles.yml
@@ -1,15 +1,9 @@
-# - name: switch
-#   slug: switch
-#   color: Grey
-# - name: router
-#   slug: router
-#   color: Cyan
-# - name: load-balancer
-#   slug: load-balancer
-#   color: Red
-# - name: server
-#   slug: server
-#   color: Blue
-# - name: patchpanel
-#   slug: patchpanel
-#   color: Black
+- name: Access Switch
+  slug: access-switch
+  color: pink
+- name: Customer Compute Locker
+  slug: customer-compute-locker
+  color: Light grey
+- name: Customer Network Locker
+  slug: customer-network-locker
+  color: Dark grey
