--- a/docker/initializers/rack_roles.yml
+++ b/docker/initializers/rack_roles.yml
@@ -1,12 +1,9 @@
-# - name: Role 1
-#   slug: role-1
-#   color: Pink
-# - name: Role 2
-#   slug: role-2
-#   color: Cyan
-# - name: Role 3
-#   slug: role-3
-#   color: Grey
-# - name: Role 4
-#   slug: role-4
-#   color: Teal
+- color: 8bc34a
+  name: Customer
+  slug: customer
+- color: 2196f3
+  name: Facility
+  slug: facility
+- color: ff5722
+  name: Utility
+  slug: utility
