--- a/docker/initializers/racks.yml
+++ b/docker/initializers/racks.yml
@@ -1,24 +1,157 @@
-# - site: AMS 1
-#   name: rack-01
-#   role: Role 1
-#   type: 4-post cabinet
-#   width: 19 inches
-#   u_height: 47
-#   custom_fields:
-#     text_field: Description
-# - site: AMS 2
-#   name: rack-02
-#   role: Role 2
-#   type: 4-post cabinet
-#   width: 19 inches
-#   u_height: 47
-#   custom_fields:
-#     text_field: Description
-# - site: SING 1
-#   name: rack-03
-#   role: Role 3
-#   type: 4-post cabinet
-#   width: 19 inches
-#   u_height: 47
-#   custom_fields:
-#     text_field: Description
+- facility_id: f.w1.c1.test0.gcp
+  group: Rack 1
+  name: W1 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w1.c1.test0.gcp
+  group: Rack 1
+  name: W1 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w1.c1.test0.gcp
+  group: Rack 1
+  name: W1 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+
+
+- facility_id: f.w2.c1.test0.gcp
+  group: Rack 2
+  name: W2 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w2.c1.test0.gcp
+  group: Rack 2
+  name: W2 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w2.c1.test0.gcp
+  group: Rack 2
+  name: W2 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+
+
+- facility_id: f.w3.c1.test0.gcp
+  group: Rack 3
+  name: W3 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w3.c1.test0.gcp
+  group: Rack 3
+  name: W3 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w3.c1.test0.gcp
+  group: Rack 3
+  name: W3 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+
+
+- facility_id: f.w4.c1.test0.gcp
+  group: Rack 4
+  name: W4 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w4.c1.test0.gcp
+  group: Rack 4
+  name: W4 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w4.c1.test0.gcp
+  group: Rack 4
+  name: W4 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+
+
+- facility_id: f.w5.c1.test0.gcp
+  group: Rack 5
+  name: W5 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w5.c1.test0.gcp
+  group: Rack 5
+  name: W5 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w5.c1.test0.gcp
+  group: Rack 5
+  name: W5 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+
+
+- facility_id: f.w6.c1.test0.gcp
+  group: Rack 6
+  name: W6 Facility
+  role: Facility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: a.w6.c1.test0.gcp
+  group: Rack 6
+  name: W6 Zone A
+  role: Customer
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: b.w6.c1.test0.gcp
+  group: Rack 6
+  name: W6 Zone B
+  role: Utility
+  site: Test Site (TEST0.GCP)
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
