--- a/docker/initializers/regions.yml
+++ b/docker/initializers/regions.yml
@@ -1,10 +1,2 @@
-# - name: Singapore
-#   slug: singapore
-# - name: Amsterdam
-#   slug: amsterdam
-# - name: Downtown
-#   slug: downtown
-#   parent: Amsterdam
-# - name: Suburbs
-#   slug: suburbs
-#   parent: Amsterdam
+- name: GCP
+  slug: gcp
