Update docker-compose file to default to the floating "develop" tag
- Instead of pinning in docker-compose we should probably follow the
  floating tag so we're at least semi-recent. It looks like we updated
  the develop build tag to be pushed along with develop.build#

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     ports:
     - 8000:80
   netbox:
-    image: "vaporio/netbox:develop.5"
+    image: "vaporio/netbox:develop"
     environment:
       SECRET_KEY: secret
       DB_HOST: postgres
