--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     - "./docker/nginx.conf:/etc/nginx/nginx.conf"
     ports:
     - 8000:80
+    depends_on:
+    - netbox
   netbox:
     image: "vaporio/netbox:develop"
     environment:
@@ -25,6 +27,7 @@ services:
       DB_PASSWORD: "12345"
       ALLOWED_HOSTS: "*"
       REDIS_HOST: redis
+      SKIP_STARTUP_SCRIPTS: "true"
     depends_on:
     - redis
     - postgres
