--- a/docker/initializers/rack_groups.yml
+++ b/docker/initializers/rack_groups.yml
@@ -1,18 +1,18 @@
-- name: Rack 1
-  site: Test Site (TEST0.GCP)
-  slug: w1-c1-test0-gcp
-- name: Rack 2
-  site: Test Site (TEST0.GCP)
-  slug: w2-c1-test0-gcp
-- name: Rack 3
-  site: Test Site (TEST0.GCP)
-  slug: w3-c1-test0-gcp
-- name: Rack 4
-  site: Test Site (TEST0.GCP)
-  slug: w4-c1-test0-gcp
-- name: Rack 5
-  site: Test Site (TEST0.GCP)
-  slug: w5-c1-test0-gcp
-- name: Rack 6
-  site: Test Site (TEST0.GCP)
-  slug: w6-c1-test0-gcp
+- name: Emulator C1 W1
+  site: Local Emulator
+  slug: w1-c1-emul8r-000
+- name: Emulator C1 W2
+  site: Local Emulator
+  slug: w2-c1-emul8r-000
+- name: Emulator C1 W3
+  site: Local Emulator
+  slug: w3-c1-emul8r-000
+- name: Emulator C1 W4
+  site: Local Emulator
+  slug: w4-c1-emul8r-000
+- name: Emulator C1 W5
+  site: Local Emulator
+  slug: w5-c1-emul8r-000
+- name: Emulator C1 W6
+  site: Local Emulator
+  slug: w6-c1-emul8r-000
