--- a/docker/initializers/racks.yml
+++ b/docker/initializers/racks.yml
@@ -1,157 +1,144 @@
-- facility_id: f.w1.c1.test0.gcp
-  group: Rack 1
-  name: W1 Facility
-  role: Facility
-  site: Test Site (TEST0.GCP)
-  type: 4-post cabinet
-  u_height: '36'
-  width: '19'
-- facility_id: a.w1.c1.test0.gcp
-  group: Rack 1
-  name: W1 Zone A
+- facility_id: a.w1.c1.emul8r.000
+  group: Emulator C1 W1
+  name: Emulator C1 W1 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w1.c1.test0.gcp
-  group: Rack 1
-  name: W1 Zone B
+- facility_id: b.w1.c1.emul8r.000
+  group: Emulator C1 W1
+  name: Emulator C1 W1 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-
-
-- facility_id: f.w2.c1.test0.gcp
-  group: Rack 2
-  name: W2 Facility
+- facility_id: f.w1.c1.emul8r.000
+  group: Emulator C1 W1
+  name: Emulator C1 W1 Facility
   role: Facility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: a.w2.c1.test0.gcp
-  group: Rack 2
-  name: W2 Zone A
+- facility_id: a.w2.c1.emul8r.000
+  group: Emulator C1 W2
+  name: Emulator C1 W2 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w2.c1.test0.gcp
-  group: Rack 2
-  name: W2 Zone B
+- facility_id: b.w2.c1.emul8r.000
+  group: Emulator C1 W2
+  name: Emulator C1 W2 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-
-
-- facility_id: f.w3.c1.test0.gcp
-  group: Rack 3
-  name: W3 Facility
+- facility_id: f.w2.c1.emul8r.000
+  group: Emulator C1 W2
+  name: Emulator C1 W2 Facility
   role: Facility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: a.w3.c1.test0.gcp
-  group: Rack 3
-  name: W3 Zone A
+- facility_id: a.w3.c1.emul8r.000
+  group: Emulator C1 W3
+  name: Emulator C1 W3 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
-
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w3.c1.test0.gcp
-  group: Rack 3
-  name: W3 Zone B
+- facility_id: b.w3.c1.emul8r.000
+  group: Emulator C1 W3
+  name: Emulator C1 W3 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-
-
-- facility_id: f.w4.c1.test0.gcp
-  group: Rack 4
-  name: W4 Facility
+- facility_id: f.w3.c1.emul8r.000
+  group: Emulator C1 W3
+  name: Emulator C1 W3 Facility
   role: Facility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: a.w4.c1.test0.gcp
-  group: Rack 4
-  name: W4 Zone A
+- facility_id: a.w4.c1.emul8r.000
+  group: Emulator C1 W4
+  name: Emulator C1 W4 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
-
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w4.c1.test0.gcp
-  group: Rack 4
-  name: W4 Zone B
+- facility_id: b.w4.c1.emul8r.000
+  group: Emulator C1 W4
+  name: Emulator C1 W4 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-
-
-- facility_id: f.w5.c1.test0.gcp
-  group: Rack 5
-  name: W5 Facility
+- facility_id: f.w4.c1.emul8r.000
+  group: Emulator C1 W4
+  name: Emulator C1 W4 Facility
   role: Facility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: a.w5.c1.test0.gcp
-  group: Rack 5
-  name: W5 Zone A
+- facility_id: a.w5.c1.emul8r.000
+  group: Emulator C1 W5
+  name: Emulator C1 W5 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
-
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w5.c1.test0.gcp
-  group: Rack 5
-  name: W5 Zone B
+- facility_id: b.w5.c1.emul8r.000
+  group: Emulator C1 W5
+  name: Emulator C1 W5 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-
-
-- facility_id: f.w6.c1.test0.gcp
-  group: Rack 6
-  name: W6 Facility
+- facility_id: f.w5.c1.emul8r.000
+  group: Emulator C1 W5
+  name: Emulator C1 W5 Facility
   role: Facility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: a.w6.c1.test0.gcp
-  group: Rack 6
-  name: W6 Zone A
+- facility_id: a.w6.c1.emul8r.000
+  group: Emulator C1 W6
+  name: Emulator C1 W6 Zone A
   role: Customer
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
-- facility_id: b.w6.c1.test0.gcp
-  group: Rack 6
-  name: W6 Zone B
+- facility_id: b.w6.c1.emul8r.000
+  group: Emulator C1 W6
+  name: Emulator C1 W6 Zone B
   role: Utility
-  site: Test Site (TEST0.GCP)
+  site: Local Emulator
+  type: 4-post cabinet
+  u_height: '36'
+  width: '19'
+- facility_id: f.w6.c1.emul8r.000
+  group: Emulator C1 W6
+  name: Emulator C1 W6 Facility
+  role: Facility
+  site: Local Emulator
   type: 4-post cabinet
   u_height: '36'
   width: '19'
